# cli-tamagotchi

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml  setup.py
Formula/: cli-tamagotchi.rb
integrations/: README.md  ci-cd.md  claude-code.md  copilot.md  cursor-code.md  git.md
plugins/ci_cd/: __init__.py  plugin.py
plugins/claude_code/: __init__.py  plugin.py
plugins/copilot/: __init__.py  plugin.py
plugins/cursor_code/: __init__.py  plugin.py
plugins/git_tool/: __init__.py  plugin.py
src/cli_tamagotchi/: __init__.py  characters.py  cli.py  coding_activity.py  engine.py  graveyard.py  illnesses.py  models.py  pet_memory.py  render.py  storage.py
src/cli_tamagotchi/plugins/: __init__.py  base.py  hooks.py  manager.py
src/cli_tamagotchi/sprites/: __init__.py  ascii.py
tests/: test_cli_tamagotchi.py  test_plugins.py
