[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tamagotchi"
version = "1.0.0"
description = "A terminal Tamagotchi that reacts to your care."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Eneko Galan Elorza" }
]
license = { text = "MIT" }
keywords = ["cli", "game", "tamagotchi", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
dependencies = [
    "rich",
]

[project.optional-dependencies]
claude-code = []
agents = []

[project.scripts]
tama = "cli_tamagotchi.cli:main"
tama-hook = "cli_tamagotchi.plugins.hooks:tama_hook_main"

[project.entry-points."cli_tamagotchi.plugins"]
claude_code = "claude_code.plugin:ClaudeCodePlugin"

[project.entry-points."cli_tamagotchi.hook_builders"]
claude_code = "claude_code.plugin:build_hook_event"

[tool.setuptools]
package-dir = {
    "" = "src",
    "claude_code" = "plugins/claude_code",
}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "plugins"]
testpaths = ["tests"]
