[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tamagotchi"
version = "1.0.0"
description = "A terminal Tamagotchi that reacts to your care."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Eneko Galan Elorza" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cli", "game", "tamagotchi", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "rich",
]

[project.urls]
Homepage = "https://github.com/enegalan/cli-tamagotchi"
Repository = "https://github.com/enegalan/cli-tamagotchi.git"
Issues = "https://github.com/enegalan/cli-tamagotchi/issues"
Changelog = "https://github.com/enegalan/cli-tamagotchi/releases"

[project.optional-dependencies]
claude-code = []
agents = []
dev = [
    "build>=1.2",
    "twine>=5",
    "pytest>=7",
]

[project.scripts]
tama = "cli_tamagotchi.cli:main"
tama-hook = "cli_tamagotchi.plugins.hooks:tama_hook_main"

[project.entry-points."cli_tamagotchi.plugins"]
claude_code = "claude_code.plugin:ClaudeCodePlugin"

[project.entry-points."cli_tamagotchi.hook_builders"]
claude_code = "claude_code.plugin:build_hook_event"

[tool.setuptools]
package-dir = {
    "" = "src",
    "claude_code" = "plugins/claude_code",
}

[tool.setuptools.packages.find]
where = ["src", "plugins"]

[tool.pytest.ini_options]
pythonpath = ["src", "plugins"]
testpaths = ["tests"]
