[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tamagotchi"
version = "1.0.0"
description = "A terminal Tamagotchi that reacts to your care."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Eneko Galan Elorza" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cli", "game", "tamagotchi", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "rich",
]

[project.urls]
Homepage = "https://github.com/enegalan/cli-tamagotchi"
Repository = "https://github.com/enegalan/cli-tamagotchi.git"
Issues = "https://github.com/enegalan/cli-tamagotchi/issues"
Changelog = "https://github.com/enegalan/cli-tamagotchi/releases"

[project.optional-dependencies]
claude-code = []
agents = []
dev = [
    "build>=1.2",
    "twine>=5",
    "pytest>=7",
]

[project.scripts]
tama = "cli_tamagotchi.cli:main"
tama-hook = "cli_tamagotchi.plugins.hooks:tama_hook_main"

[project.entry-points."cli_tamagotchi.plugins"]
ci_cd = "ci_cd.plugin:CiCdPlugin"
claude_code = "claude_code.plugin:ClaudeCodePlugin"
copilot = "copilot.plugin:CopilotPlugin"
cursor_code = "cursor_code.plugin:CursorCodePlugin"
git_tool = "git_tool.plugin:GitToolPlugin"

[project.entry-points."cli_tamagotchi.hook_builders"]
ci_cd = "ci_cd.plugin:build_hook_event"
claude_code = "claude_code.plugin:build_hook_event"
copilot = "copilot.plugin:build_hook_event"
cursor_code = "cursor_code.plugin:build_hook_event"
git_tool = "git_tool.plugin:build_hook_event"

[tool.setuptools]
package-dir = {
    "" = "src",
    "ci_cd" = "plugins/ci_cd",
    "claude_code" = "plugins/claude_code",
    "copilot" = "plugins/copilot",
    "cursor_code" = "plugins/cursor_code",
    "git_tool" = "plugins/git_tool",
}

[tool.setuptools.packages.find]
where = ["src", "plugins"]

[tool.pytest.ini_options]
pythonpath = ["src", "plugins"]
testpaths = ["tests"]
